tests/paczka1/fuzzy1/79643283.err
Error in line 4: oLbBVTB6rq A:17 96,1
Error in line 6: A817 Sp3 p7,8
Error in line 2: Fl9AOG S354 16,5
Error in line 8: Fl9AOG A817 89,0
Error in line 7: A817 S43 105,2
Error in line 11: oLbBVTB6rq A817 253,7
Error in line 28: oLbBVTB6rq S43 26,0
Error in line 30: ztWrtUh6 A553 65,6
